tests/ui/suggestions/multiple_tuples_implement_same_trait.stderr
error[E0277]: `Foo` doesn't implement `Debug`
  --> $DIR/multiple_tuples_implement_same_trait.rs:8:17
   |
LL |     testing((1, Foo));
   |     -------     ^^^ the trait `Debug` is not implemented for `Foo`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `Debug`:  
             ()
             (T₁, T₂, …, Tₙ) // up to tuples of length 12
             // Other relevant impls here
           and 5 others
   = note: required for `({integer}, Foo)` to implement `Debug`
note: required by a bound in `testing`
  --> $DIR/multiple_tuples_implement_same_trait.rs:3:15
   |
LL | fn testing<T: Debug>(t: T) {}
   |               ^^^^^ required by this bound in `testing`
help: consider annotating `Foo` with `#[derive(Debug)]`
   |
LL + #[derive(Debug)]
LL | struct Foo;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
